# backend/apiSpec.json
@@ -7,50 +7,54 @@
   },
   "servers": [
     {
-      "url": "http://localhost:3000/api/v1",
+      "url": "http://localhost:10083/api/v1",
       "description": "Local server"
     }
   ],
+  "host": "http://localhost:10083",
+  "basePath": "/api/v1",
+  "schemes": ["http"],
   "paths": {
     "/login": {
       "get": {
-        "summary": "Return all users with list.",
+        "summary": "Login with refresh token",
+        "parameters": {
+          "in": "header",
+          "name": "authentication",
+          "schema": {
+            "type": "string"
+          },
+          "required": true,
+          "description": "Refresh Token for authenticating user"
+        },
         "description": "Return all existed users.",
         "responses": {
           "200": {
-            "description": "A JSON array of user names",
+            "description": "Successful login with refresh token",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/login"
-                  }
-                },
-                "examples": {
-                  "Successful": {
-                    "success": true,
-                    "error": null,
-                    "errorType": null,
-                    "result": {
-                      "properties": {
-                        "refreshToken": {
-                          "type": "string",
-                          "example": "mOAl9jp5JFoIcqtT"
-                        },
-                        "accessToken": {
-                          "type": "string",
-                          "example": "eyJhbGciOiJIUzI1NiJ9.eyJSb2xlIjoiQWRtaW4iLCJJc3N1ZXIiOiJJc3N1ZXIiLCJVc2VybmFtZSI6IkphdmFJblVzZSIsImV4cCI6MTY1MTk0MTIzMSwiaWF0IjoxNjUxOTQxMjMxfQ.wfjcS5lplDRE2OO0sdKENvNxHWKKQpojHEctnx_ZwHM"
-                        }
-                      }
-                    }
-                  },
-                  "Unsuccessful": {
-                    "success": false,
-                    "error": "Unauthorized Action",
-                    "errorType": "UnauthorizationError",
-                    "result": null
-                  }
+                  "$ref": "#/components/schemas/Successful Login"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden login with invalid refresh token",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Invalid Refresh Token"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Forbidden login due to internal server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Internal Server Error"
                 }
               }
             }
@@ -68,7 +72,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/User"
+                    "$ref": "#/components/schemas/unsuccessful_login"
                   }
                 }
               }
@@ -80,32 +84,76 @@
   },
   "components": {
     "schemas": {
-      "login": {
+      "Successful Login": {
         "properties": {
           "success": {
-            "type": "boolean"
+            "type": "boolean",
+            "example": true
           },
           "error": {
-            "type": "string"
+            "type": "string",
+            "example": null
           },
           "errorType": {
-            "type": "string"
+            "type": "string",
+            "example": null
           },
           "result": {
             "type": "object",
             "properties": {
               "refreshToken": {
                 "type": "string",
-                "example": "mOAl9jp5JFoIcqtT"
+                "example": "123"
               },
               "accessToken": {
                 "type": "string",
-                "example": "eyJhbGciOiJIUzI1NiJ9.eyJSb2xlIjoiQWRtaW4iLCJJc3N1ZXIiOiJJc3N1ZXIiLCJVc2VybmFtZSI6IkphdmFJblVzZSIsImV4cCI6MTY1MTk0MTIzMSwiaWF0IjoxNjUxOTQxMjMxfQ.wfjcS5lplDRE2OO0sdKENvNxHWKKQpojHEctnx_ZwHM"
+                "example": "456"
               }
             }
           }
         },
         "required": ["id", "username", "email"]
+      },
+      "Invalid Refresh Token": {
+        "properties": {
+          "success": {
+            "type": "boolean",
+            "example": false
+          },
+          "error": {
+            "type": "string",
+            "example": "Invalid refresh token!"
+          },
+          "errorType": {
+            "type": "string",
+            "example": "InvalidRefreshTokenError"
+          },
+          "result": {
+            "type": "string",
+            "example": null
+          }
+        },
+        "required": ["id", "username", "email"]
+      },
+      "Internal Server Error": {
+        "properties": {
+          "success": {
+            "type": "boolean",
+            "example": false
+          },
+          "error": {
+            "type": "string",
+            "example": "Reference error!"
+          },
+          "errorType": {
+            "type": "string",
+            "example": "InternalServerError"
+          },
+          "result": {
+            "type": "string",
+            "example": null
+          }
+        }
       }
     }
   }
